test/ui/tests/name-resolution/multiple-undefined.stderr
error[E021]: the binding ‘on’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:3:7
  |
3 | what: on earth = this bogus line
  |       ^^
  |

error[E021]: the binding ‘earth’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:3:10
  |
3 | what: on earth = this bogus line
  |          ^^^^^
  |

error[E021]: the binding ‘this’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:3:18
  |
3 | what: on earth = this bogus line
  |                  ^^^^
  |

error[E021]: the binding ‘bogus’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:3:23
  |
3 | what: on earth = this bogus line
  |                       ^^^^^
  |

error[E021]: the binding ‘line’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:3:29
  |
3 | what: on earth = this bogus line
  |                             ^^^^
  |

error[E021]: the binding ‘Non-Existent’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:5:14
  |
5 | data Xoo (A: Non-Existent): Departed of
  |              ^^^^^^^^^^^^
  |

error[E021]: the binding ‘Departed’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:5:29
  |
5 | data Xoo (A: Non-Existent): Departed of
  |                             ^^^^^^^^
  |

error[E021]: the binding ‘Slipped-Away’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:6:10
  |
6 |     x00: Slipped-Away
  |          ^^^^^^^^^^^^
  |

error[E021]: the binding ‘Lost-All-Along’ is not defined in this scope
 --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:7:10
  |
7 |     x11: Lost-All-Along
  |          ^^^^^^^^^^^^^^
  |

error[E021]: the binding ‘Void’ is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:10:21
   |
10 |     Nothing: Type = Void
   |                     ^^^^
   |

error[E021]: the binding ‘f’ is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:15:42
   |
15 | ex-nihilo (x: Thing) (y: Thing): Thing = f z Thing.thing
   |                                          ^
   |
  help: a binding with a similar name exists in scope: `y`

error[E021]: the binding ‘z’ is not defined in this scope
  --> ${TEST_FOLDER}/name-resolution/multiple-undefined.lushui:15:44
   |
15 | ex-nihilo (x: Thing) (y: Thing): Thing = f z Thing.thing
   |                                            ^
   |
  help: a binding with a similar name exists in scope: `y`

error: aborting due to 12 previous errors

